Significantly revised general_trends.ipynb.

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -136,7 +136,8 @@
     "general_df = general_all[\n",
     "    [\n",
     "        'DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE', 'CPAPHONE',\n",
-    "        'TYPEOFENTITY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND'\n",
+    "        'TYPEOFENTITY', 'COGAGENCY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND',\n",
+    "        'LOWRISK'\n",
     "    ]\n",
     "]\n",
     "general_df = general_df.assign(\n",
@@ -182,6 +183,9 @@
     "    QCOSTS=general_all['QCOSTS'].str.strip()\n",
     ")\n",
     "general_df = general_df.assign(\n",
+    "    GOINGCONCERN=general_all['GOINGCONCERN'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
     "    CITY=general_all['CITY'].str.strip()\n",
     ")\n",
     "general_df = general_df.assign(\n",
@@ -190,6 +194,9 @@
     "general_df = general_df.assign(\n",
     "    EIN=pd.to_numeric(general_all['EIN'].str.split('-').str.get(-1))\n",
     ")\n",
+    "general_df = general_df.assign(\n",
+    "    DOLLARTHRESHOLD=pd.to_numeric(general_all['DOLLARTHRESHOLD'].str.strip(), errors='coerce')\n",
+    ")\n",
     "general_df.apply(lambda x: x.str.upper() if(x.dtype == 'object') else x)  # convert all text to uppercase\n",
     "general_df.head()\n",
     "general_df.to_pickle(fac_path + 'processed/general.pkl')"
@@ -197,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -207,11 +214,12 @@
      "output_type": "stream",
      "text": [
       "Index(['DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE', 'CPAPHONE', 'TYPEOFENTITY',\n",
-      "       'OVERSIGHTAGENCY', 'TOTFEDEXPEND', 'REPORTABLECONDITION',\n",
+      "       'COGAGENCY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND', 'LOWRISK',\n",
+      "       'AUDITEENAME', 'CPAFIRMNAME', 'CPACONTACT', 'CPATITLE', 'ZIPCODE',\n",
+      "       'CPAZIPCODE', 'TYPEREPORT_FS', 'TYPEREPORT_MP', 'REPORTABLECONDITION',\n",
       "       'MATERIALWEAKNESS', 'MATERIALNONCOMPLIANCE', 'REPORTABLECONDITION_MP',\n",
-      "       'MATERIALWEAKNESS_MP', 'QCOSTS', 'AUDITEENAME', 'CPAFIRMNAME',\n",
-      "       'CPACONTACT', 'CPATITLE', 'ZIPCODE', 'CPAZIPCODE', 'TYPEREPORT_FS',\n",
-      "       'TYPEREPORT_MP', 'CITY', 'CPACITY', 'EIN'],\n",
+      "       'MATERIALWEAKNESS_MP', 'QCOSTS', 'GOINGCONCERN', 'CITY', 'CPACITY',\n",
+      "       'EIN', 'DOLLARTHRESHOLD'],\n",
       "      dtype='object')\n"
      ]
     }
