--- a/general_trends.ipynb
+++ b/general_trends.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -479,7 +479,7 @@
        "406108       2018                   NEW YORK STATE           7.040814e+10"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -656,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic sorts"
+    "# Sort data by a particular field and look at basic trends"
    ]
   },
   {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -680,7 +680,7 @@
     "# df_analysis = df_general[df_general['TOTFEDEXPEND'] >= 3e6]\n",
     "# df_analysis = df_general[(df_general['TOTFEDEXPEND'] >= 1e6) & (df_general['TOTFEDEXPEND'] <= 5e6)]\n",
     "\n",
-    "\n",
+    "# Remove territories/islands\n",
     "df_analysis = df_analysis[~df_analysis['STATE'].isin(['AS','MP','FM','PR','GU','PW','MH','VI'])]"
    ]
   },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -797,412 +797,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PCT_sortby</th>\n",
-       "      <th>PCT_TOTFEDEXPEND_ADJUSTED</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CA</th>\n",
-       "      <td>11.204002</td>\n",
-       "      <td>0.130909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NY</th>\n",
-       "      <td>6.910040</td>\n",
-       "      <td>0.105718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TX</th>\n",
-       "      <td>5.417596</td>\n",
-       "      <td>0.076276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PA</th>\n",
-       "      <td>5.213924</td>\n",
-       "      <td>0.072672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OH</th>\n",
-       "      <td>4.265062</td>\n",
-       "      <td>0.030779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FL</th>\n",
-       "      <td>4.225497</td>\n",
-       "      <td>0.037861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IL</th>\n",
-       "      <td>3.999119</td>\n",
-       "      <td>0.034266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MI</th>\n",
-       "      <td>3.527785</td>\n",
-       "      <td>0.027105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MA</th>\n",
-       "      <td>3.170671</td>\n",
-       "      <td>0.026642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NC</th>\n",
-       "      <td>2.899224</td>\n",
-       "      <td>0.031120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NJ</th>\n",
-       "      <td>2.533509</td>\n",
-       "      <td>0.023184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GA</th>\n",
-       "      <td>2.501170</td>\n",
-       "      <td>0.022451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VA</th>\n",
-       "      <td>2.431330</td>\n",
-       "      <td>0.016862</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WA</th>\n",
-       "      <td>2.311260</td>\n",
-       "      <td>0.016995</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MN</th>\n",
-       "      <td>2.047037</td>\n",
-       "      <td>0.014202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WI</th>\n",
-       "      <td>1.909077</td>\n",
-       "      <td>0.014846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MO</th>\n",
-       "      <td>1.856095</td>\n",
-       "      <td>0.016286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IN</th>\n",
-       "      <td>1.821003</td>\n",
-       "      <td>0.014806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AZ</th>\n",
-       "      <td>1.782815</td>\n",
-       "      <td>0.015179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AL</th>\n",
-       "      <td>1.769397</td>\n",
-       "      <td>0.011006</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KY</th>\n",
-       "      <td>1.669969</td>\n",
-       "      <td>0.012136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TN</th>\n",
-       "      <td>1.600817</td>\n",
-       "      <td>0.021581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MD</th>\n",
-       "      <td>1.531665</td>\n",
-       "      <td>0.023980</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OR</th>\n",
-       "      <td>1.522032</td>\n",
-       "      <td>0.011117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LA</th>\n",
-       "      <td>1.508615</td>\n",
-       "      <td>0.016585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SC</th>\n",
-       "      <td>1.488316</td>\n",
-       "      <td>0.010256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MS</th>\n",
-       "      <td>1.326962</td>\n",
-       "      <td>0.009819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CO</th>\n",
-       "      <td>1.310448</td>\n",
-       "      <td>0.011339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DC</th>\n",
-       "      <td>1.219965</td>\n",
-       "      <td>0.008784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CT</th>\n",
-       "      <td>1.179713</td>\n",
-       "      <td>0.009898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OK</th>\n",
-       "      <td>1.141868</td>\n",
-       "      <td>0.010744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IA</th>\n",
-       "      <td>1.055858</td>\n",
-       "      <td>0.009363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NM</th>\n",
-       "      <td>1.003908</td>\n",
-       "      <td>0.007266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PR</th>\n",
-       "      <td>0.911018</td>\n",
-       "      <td>0.007490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AR</th>\n",
-       "      <td>0.863884</td>\n",
-       "      <td>0.018290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KS</th>\n",
-       "      <td>0.816063</td>\n",
-       "      <td>0.005593</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WV</th>\n",
-       "      <td>0.739342</td>\n",
-       "      <td>0.005657</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AK</th>\n",
-       "      <td>0.651267</td>\n",
-       "      <td>0.004311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ME</th>\n",
-       "      <td>0.650235</td>\n",
-       "      <td>0.004898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NE</th>\n",
-       "      <td>0.594157</td>\n",
-       "      <td>0.004351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UT</th>\n",
-       "      <td>0.585212</td>\n",
-       "      <td>0.007143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MT</th>\n",
-       "      <td>0.567322</td>\n",
-       "      <td>0.003117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SD</th>\n",
-       "      <td>0.543239</td>\n",
-       "      <td>0.004557</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RI</th>\n",
-       "      <td>0.517436</td>\n",
-       "      <td>0.005084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ID</th>\n",
-       "      <td>0.491977</td>\n",
-       "      <td>0.003568</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ND</th>\n",
-       "      <td>0.455165</td>\n",
-       "      <td>0.003973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NV</th>\n",
-       "      <td>0.432114</td>\n",
-       "      <td>0.004451</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HI</th>\n",
-       "      <td>0.410440</td>\n",
-       "      <td>0.003404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NH</th>\n",
-       "      <td>0.408375</td>\n",
-       "      <td>0.003877</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VT</th>\n",
-       "      <td>0.305507</td>\n",
-       "      <td>0.003341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WY</th>\n",
-       "      <td>0.286585</td>\n",
-       "      <td>0.001578</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DE</th>\n",
-       "      <td>0.184061</td>\n",
-       "      <td>0.002063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GU</th>\n",
-       "      <td>0.051262</td>\n",
-       "      <td>0.000399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MP</th>\n",
-       "      <td>0.043349</td>\n",
-       "      <td>0.000147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FM</th>\n",
-       "      <td>0.041973</td>\n",
-       "      <td>0.000116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VI</th>\n",
-       "      <td>0.038188</td>\n",
-       "      <td>0.000271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AS</th>\n",
-       "      <td>0.027867</td>\n",
-       "      <td>0.000187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MH</th>\n",
-       "      <td>0.016170</td>\n",
-       "      <td>0.000070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PW</th>\n",
-       "      <td>0.012041</td>\n",
-       "      <td>0.000031</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    PCT_sortby  PCT_TOTFEDEXPEND_ADJUSTED\n",
-       "CA   11.204002                   0.130909\n",
-       "NY    6.910040                   0.105718\n",
-       "TX    5.417596                   0.076276\n",
-       "PA    5.213924                   0.072672\n",
-       "OH    4.265062                   0.030779\n",
-       "FL    4.225497                   0.037861\n",
-       "IL    3.999119                   0.034266\n",
-       "MI    3.527785                   0.027105\n",
-       "MA    3.170671                   0.026642\n",
-       "NC    2.899224                   0.031120\n",
-       "NJ    2.533509                   0.023184\n",
-       "GA    2.501170                   0.022451\n",
-       "VA    2.431330                   0.016862\n",
-       "WA    2.311260                   0.016995\n",
-       "MN    2.047037                   0.014202\n",
-       "WI    1.909077                   0.014846\n",
-       "MO    1.856095                   0.016286\n",
-       "IN    1.821003                   0.014806\n",
-       "AZ    1.782815                   0.015179\n",
-       "AL    1.769397                   0.011006\n",
-       "KY    1.669969                   0.012136\n",
-       "TN    1.600817                   0.021581\n",
-       "MD    1.531665                   0.023980\n",
-       "OR    1.522032                   0.011117\n",
-       "LA    1.508615                   0.016585\n",
-       "SC    1.488316                   0.010256\n",
-       "MS    1.326962                   0.009819\n",
-       "CO    1.310448                   0.011339\n",
-       "DC    1.219965                   0.008784\n",
-       "CT    1.179713                   0.009898\n",
-       "OK    1.141868                   0.010744\n",
-       "IA    1.055858                   0.009363\n",
-       "NM    1.003908                   0.007266\n",
-       "PR    0.911018                   0.007490\n",
-       "AR    0.863884                   0.018290\n",
-       "KS    0.816063                   0.005593\n",
-       "WV    0.739342                   0.005657\n",
-       "AK    0.651267                   0.004311\n",
-       "ME    0.650235                   0.004898\n",
-       "NE    0.594157                   0.004351\n",
-       "UT    0.585212                   0.007143\n",
-       "MT    0.567322                   0.003117\n",
-       "SD    0.543239                   0.004557\n",
-       "RI    0.517436                   0.005084\n",
-       "ID    0.491977                   0.003568\n",
-       "ND    0.455165                   0.003973\n",
-       "NV    0.432114                   0.004451\n",
-       "HI    0.410440                   0.003404\n",
-       "NH    0.408375                   0.003877\n",
-       "VT    0.305507                   0.003341\n",
-       "WY    0.286585                   0.001578\n",
-       "DE    0.184061                   0.002063\n",
-       "GU    0.051262                   0.000399\n",
-       "MP    0.043349                   0.000147\n",
-       "FM    0.041973                   0.000116\n",
-       "VI    0.038188                   0.000271\n",
-       "AS    0.027867                   0.000187\n",
-       "MH    0.016170                   0.000070\n",
-       "PW    0.012041                   0.000031"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# df_sortby_expenditures.sort_values('PCT_TOTFEDEXPEND_ADJUSTED', ascending=False)\n",
-    "df_sortby_expenditures.sort_values('PCT_sortby', ascending=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1211,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1246,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1298,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1334,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1385,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1414,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -1426,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1459,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1804,7 +1398,7 @@
        "NY  6.589603   5.116084"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
