Added an analysis notebook for trends in cfda.txt (cfda_trends.ipynb), and also a notebook for checking relationships between allfac files (check_file_relationships.ipynb

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -29,96 +29,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process findings.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "fac_path = '/data/ihwang/data_journalism/allfac'\n",
-    "findings = '/raw/findings.txt'\n",
-    "###############################################################################\n",
-    "\n",
-    "\n",
-    "data = []\n",
-    "with open(fac_path + findings, 'r') as f:\n",
-    "    for line in f:\n",
-    "        if line[0] != ' ':\n",
-    "            header = line.split(',')\n",
-    "        else:\n",
-    "            fields = re.sub('\\s', '', line).split(',')\n",
-    "            [DBKEY,AUDITYEAR,ELECAUDITSID,\n",
-    "             ELECAUDITFINDINGSID] = [int(field) for field in fields[:4]]\n",
-    "            # Can be multiple FINDINGSREFNUMS which makes it necessary to parse\n",
-    "            # file line-by-line (instead of using pandas.csv_read)\n",
-    "            [*FINDINGSREFNUMS] = fields[4:-9]\n",
-    "            [TYPEREQUIREMENT, MODIFIEDOPINION,OTHERNONCOMPLIANCE,\n",
-    "             MATERIALWEAKNESS,SIGNIFICANTDEFICIENCY,OTHERFINDINGS,QCOSTS,\n",
-    "             REPEATFINDING,PRIORFINDINGREFNUMS] = fields[-9:]\n",
-    "            data.append(\n",
-    "                [\n",
-    "                    DBKEY,AUDITYEAR,ELECAUDITSID,ELECAUDITFINDINGSID,\n",
-    "                    FINDINGSREFNUMS, TYPEREQUIREMENT,MODIFIEDOPINION,\n",
-    "                    OTHERNONCOMPLIANCE,MATERIALWEAKNESS,\n",
-    "                    SIGNIFICANTDEFICIENCY,OTHERFINDINGS,QCOSTS,\n",
-    "                    REPEATFINDING,PRIORFINDINGREFNUMS\n",
-    "                ]\n",
-    "            )\n",
-    "findings_all = pd.DataFrame(data, columns=header)\n",
-    "findings_df = findings_all[\n",
-    "    [\n",
-    "        'DBKEY', 'AUDITYEAR', 'TYPEREQUIREMENT', 'MODIFIEDOPINION', \n",
-    "        'OTHERNONCOMPLIANCE','MATERIALWEAKNESS', 'SIGNIFICANTDEFICIENCY',\n",
-    "        'OTHERFINDINGS', 'QCOSTS'\n",
-    "    ]\n",
-    "]\n",
-    "findings_df.head()\n",
-    "findings_df.to_pickle(fac_path + '/processed/findings.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['DBKEY', 'AUDITYEAR', 'ELECAUDITSID', 'ELECAUDITFINDINGSID',\n",
-       "       'FINDINGSREFNUMS', 'TYPEREQUIREMENT', 'MODIFIEDOPINION',\n",
-       "       'OTHERNONCOMPLIANCE', 'MATERIALWEAKNESS', 'SIGNIFICANTDEFICIENCY',\n",
-       "       'OTHERFINDINGS', 'QCOSTS', 'REPEATFINDING',\n",
-       "       'PRIORFINDINGREFNUMS                                                                                                                                                                                                         \\n'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "findings_all.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Process general.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -204,9 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -230,6 +147,148 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process cfda.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select only for data with numeric EIN. Sometimes there are ones with special characters, like '22-148760', so just skip those."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fac_path = '/data/ihwang/data_journalism/allfac/'\n",
+    "cfda = '/raw/cfda.txt'\n",
+    "\n",
+    "data = []\n",
+    "with open(fac_path + cfda, 'r', encoding = 'ISO-8859-1') as f_cfda:\n",
+    "    for line in f_cfda:\n",
+    "        fields = line.strip().split(',')\n",
+    "        if fields[0] == 'AUDITYEAR':\n",
+    "            header = [\n",
+    "                'AUDITYEAR', 'DBKEY', 'EIN', 'CFDA', 'FEDERALPROGRAMNAME', 'AMOUNT', 'DIRECT',\n",
+    "                'PASSTHROUGHAWARD', 'PASSTHROUGHAMOUNT', 'MAJORPROGRAM', 'ELECAUDITSID'\n",
+    "            ]\n",
+    "        else:\n",
+    "            if len(set(fields[3])) > 2:\n",
+    "                if fields[2].isnumeric():\n",
+    "                    EIN = int(fields[2])\n",
+    "                    CFDA = re.sub(r'[^\\.\\w]', '', fields[3])\n",
+    "                    [AUDITYEAR, DBKEY] = [int(fields[0]), int(fields[1])]\n",
+    "                    FEDERALPROGRAMNAME = re.sub(r'[\\W]+', ' ', fields[6].strip())\n",
+    "                    AMOUNT = int(fields[7])\n",
+    "                    DIRECT = fields[12]\n",
+    "                    PASSTHROUGHAWARD = fields[13]\n",
+    "                    PASSTHROUGHAMOUNT = fields[14]\n",
+    "                    MAJORPROGRAM = fields[15]\n",
+    "                    ELECAUDITSID = fields[-1]\n",
+    "                    data.append(\n",
+    "                        [\n",
+    "                            AUDITYEAR, DBKEY, EIN, CFDA, FEDERALPROGRAMNAME, AMOUNT, DIRECT,\n",
+    "                            PASSTHROUGHAWARD, PASSTHROUGHAMOUNT, MAJORPROGRAM, ELECAUDITSID\n",
+    "                        ]\n",
+    "                    )\n",
+    "df_cfda = pd.DataFrame(data, columns=header)\n",
+    "df_cfda.to_pickle(fac_path + 'processed/cfda.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process findings.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fac_path = '/data/ihwang/data_journalism/allfac'\n",
+    "findings = '/raw/findings.txt'\n",
+    "###############################################################################\n",
+    "\n",
+    "\n",
+    "data = []\n",
+    "with open(fac_path + findings, 'r') as f:\n",
+    "    for line in f:\n",
+    "        if line[0] != ' ':\n",
+    "            header = line.split(',')\n",
+    "        else:\n",
+    "            fields = re.sub('\\s', '', line).split(',')\n",
+    "            [DBKEY,AUDITYEAR,ELECAUDITSID,\n",
+    "             ELECAUDITFINDINGSID] = [int(field) for field in fields[:4]]\n",
+    "            # Can be multiple FINDINGSREFNUMS which makes it necessary to parse\n",
+    "            # file line-by-line (instead of using pandas.csv_read)\n",
+    "            [*FINDINGSREFNUMS] = fields[4:-9]\n",
+    "            [TYPEREQUIREMENT, MODIFIEDOPINION,OTHERNONCOMPLIANCE,\n",
+    "             MATERIALWEAKNESS,SIGNIFICANTDEFICIENCY,OTHERFINDINGS,QCOSTS,\n",
+    "             REPEATFINDING,PRIORFINDINGREFNUMS] = fields[-9:]\n",
+    "            data.append(\n",
+    "                [\n",
+    "                    DBKEY,AUDITYEAR,ELECAUDITSID,ELECAUDITFINDINGSID,\n",
+    "                    FINDINGSREFNUMS, TYPEREQUIREMENT,MODIFIEDOPINION,\n",
+    "                    OTHERNONCOMPLIANCE,MATERIALWEAKNESS,\n",
+    "                    SIGNIFICANTDEFICIENCY,OTHERFINDINGS,QCOSTS,\n",
+    "                    REPEATFINDING,PRIORFINDINGREFNUMS\n",
+    "                ]\n",
+    "            )\n",
+    "findings_all = pd.DataFrame(data, columns=header)\n",
+    "findings_df = findings_all[\n",
+    "    [\n",
+    "        'DBKEY', 'AUDITYEAR', 'TYPEREQUIREMENT', 'MODIFIEDOPINION', \n",
+    "        'OTHERNONCOMPLIANCE','MATERIALWEAKNESS', 'SIGNIFICANTDEFICIENCY',\n",
+    "        'OTHERFINDINGS', 'QCOSTS'\n",
+    "    ]\n",
+    "]\n",
+    "findings_df.head()\n",
+    "findings_df.to_pickle(fac_path + '/processed/findings.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['DBKEY', 'AUDITYEAR', 'ELECAUDITSID', 'ELECAUDITFINDINGSID',\n",
+       "       'FINDINGSREFNUMS', 'TYPEREQUIREMENT', 'MODIFIEDOPINION',\n",
+       "       'OTHERNONCOMPLIANCE', 'MATERIALWEAKNESS', 'SIGNIFICANTDEFICIENCY',\n",
+       "       'OTHERFINDINGS', 'QCOSTS', 'REPEATFINDING',\n",
+       "       'PRIORFINDINGREFNUMS                                                                                                                                                                                                         \\n'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findings_all.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
