Added some sorting features to general_trends.ipynb

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -156,12 +156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select only for data with numeric EIN. Sometimes there are ones with special characters, like '22-148760', so just skip those."
+    "Select only for data with numeric EIN: sometimes there are EINs with special characters, like '22-148760', so just skip those."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
     "        if fields[0] == 'AUDITYEAR':\n",
     "            header = [\n",
     "                'AUDITYEAR', 'DBKEY', 'EIN', 'CFDA', 'FEDERALPROGRAMNAME', 'AMOUNT', 'DIRECT',\n",
-    "                'PASSTHROUGHAWARD', 'PASSTHROUGHAMOUNT', 'MAJORPROGRAM', 'ELECAUDITSID'\n",
+    "                'PASSTHROUGHAWARD', 'PASSTHROUGHAMOUNT', 'MAJORPROGRAM', 'TYPEREPORT_MP', 'ELECAUDITSID'\n",
     "            ]\n",
     "        else:\n",
     "            if len(set(fields[3])) > 2:\n",
@@ -191,11 +191,12 @@
     "                    PASSTHROUGHAWARD = fields[13]\n",
     "                    PASSTHROUGHAMOUNT = fields[14]\n",
     "                    MAJORPROGRAM = fields[15]\n",
+    "                    TYPEREPORT_MP = fields[16]\n",
     "                    ELECAUDITSID = fields[-1]\n",
     "                    data.append(\n",
     "                        [\n",
     "                            AUDITYEAR, DBKEY, EIN, CFDA, FEDERALPROGRAMNAME, AMOUNT, DIRECT,\n",
-    "                            PASSTHROUGHAWARD, PASSTHROUGHAMOUNT, MAJORPROGRAM, ELECAUDITSID\n",
+    "                            PASSTHROUGHAWARD, PASSTHROUGHAMOUNT, MAJORPROGRAM, TYPEREPORT_MP, ELECAUDITSID\n",
     "                        ]\n",
     "                    )\n",
     "df_cfda = pd.DataFrame(data, columns=header)\n",
