Fixed a bug in data export so that object types (strings) are converted to all uppercase

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -113,14 +113,14 @@
     "general_df = general_df.assign(\n",
     "    DOLLARTHRESHOLD=pd.to_numeric(general_all['DOLLARTHRESHOLD'].str.strip(), errors='coerce')\n",
     ")\n",
-    "general_df.apply(lambda x: x.str.upper() if(x.dtype == 'object') else x)  # convert all text to uppercase\n",
+    "general_df = general_df.apply(lambda x: x.str.upper() if(x.dtype == 'object') else x)  # convert all text to uppercase\n",
     "general_df.head()\n",
     "general_df.to_pickle(fac_path + 'processed/general.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -137,12 +137,43 @@
       "       'MATERIALWEAKNESS', 'MATERIALNONCOMPLIANCE', 'REPORTABLECONDITION_MP',\n",
       "       'MATERIALWEAKNESS_MP', 'QCOSTS', 'GOINGCONCERN', 'CITY', 'CPACITY',\n",
       "       'EIN', 'DOLLARTHRESHOLD'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "DBKEY                       int64\n",
+      "AUDITYEAR                   int64\n",
+      "STATE                      object\n",
+      "CPASTATE                   object\n",
+      "CPAPHONE                   object\n",
+      "TYPEOFENTITY               object\n",
+      "COGAGENCY                  object\n",
+      "OVERSIGHTAGENCY            object\n",
+      "TOTFEDEXPEND                int64\n",
+      "LOWRISK                    object\n",
+      "AUDITEENAME                object\n",
+      "CPAFIRMNAME                object\n",
+      "CPACONTACT                 object\n",
+      "CPATITLE                   object\n",
+      "ZIPCODE                   float64\n",
+      "CPAZIPCODE                float64\n",
+      "TYPEREPORT_FS              object\n",
+      "TYPEREPORT_MP              object\n",
+      "REPORTABLECONDITION        object\n",
+      "MATERIALWEAKNESS           object\n",
+      "MATERIALNONCOMPLIANCE      object\n",
+      "REPORTABLECONDITION_MP     object\n",
+      "MATERIALWEAKNESS_MP        object\n",
+      "QCOSTS                     object\n",
+      "GOINGCONCERN               object\n",
+      "CITY                       object\n",
+      "CPACITY                    object\n",
+      "EIN                         int64\n",
+      "DOLLARTHRESHOLD           float64\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(general_df.columns)"
+    "print(general_df.columns)\n",
+    "print(general_df.dtypes)"
    ]
   },
   {
