split financial statement opinions into a different notebook, and further splitting financial statements into different basis of accounting frameworks.

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -76,6 +76,15 @@
     ")\n",
     "general_df = general_df.assign(\n",
     "    TYPEREPORT_FS=general_all['TYPEREPORT_FS'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    SP_FRAMEWORK=general_all['SP_FRAMEWORK'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    SP_FRAMEWORK_REQUIRED=general_all['SP_FRAMEWORK_REQUIRED'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    TYPEREPORT_SP_FRAMEWORK=general_all['TYPEREPORT_SP_FRAMEWORK'].str.strip()\n",
     ")\n",
     "general_df = general_df.assign(\n",
     "    TYPEREPORT_MP=general_all['TYPEREPORT_MP'].str.strip()\n",
